# Qt5-training_QtPainter

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
